feat: add websocket chat, config broadcasting, cors
Добавил функционал чата.
