# public/docs/openapi.yaml
@@ -5,7 +5,7 @@ info:
   version: 1.0.0
 servers:
   -
-    url: 'http://localhost'
+    url: 'http://127.0.0.1:80'
 paths:
   /api/user:
     get:
@@ -28,10 +28,10 @@ paths:
                     example: Unauthenticated.
       tags:
         - Endpoints
-  /api/register:
+  /api/v1/register:
     post:
       summary: ''
-      operationId: postApiRegister
+      operationId: postApiV1Register
       description: ''
       parameters: []
       responses: {  }
@@ -47,19 +47,19 @@ paths:
                 first_name:
                   type: string
                   description: ''
-                  example: doloribus
+                  example: expedita
                 last_name:
                   type: string
                   description: ''
-                  example: atque
+                  example: facere
                 email:
                   type: string
                   description: 'Must be a valid email address.'
-                  example: ron.weber@example.com
+                  example: heidenreich.jermaine@example.org
                 password:
                   type: string
                   description: ''
-                  example: "-C'}u2'$M=,G&9>"
+                  example: 'FrVu_2ub#S*.zq-xV'
                 password_confirmation:
                   type: string
                   description: ''
@@ -71,10 +71,10 @@ paths:
                 - password
                 - password_confirmation
       security: []
-  /api/login:
+  /api/v1/login:
     post:
       summary: ''
-      operationId: postApiLogin
+      operationId: postApiV1Login
       description: ''
       parameters: []
       responses: {  }
@@ -90,19 +90,19 @@ paths:
                 email:
                   type: string
                   description: 'Must be a valid email address.'
-                  example: itillman@example.org
+                  example: griffin75@example.net
                 password:
                   type: string
                   description: ''
-                  example: "kMFbdlN<#>2'dzTg|1"
+                  example: "mZ8_2DDCz'W"
               required:
                 - email
                 - password
       security: []
-  /api/users:
+  /api/v1/users:
     get:
       summary: ''
-      operationId: getApiUsers
+      operationId: getApiV1Users
       description: ''
       parameters:
         -
@@ -115,6 +115,69 @@ paths:
             type: integer
             description: ''
             example: 1
+      responses:
+        401:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  message: Unauthenticated.
+                properties:
+                  message:
+                    type: string
+                    example: Unauthenticated.
+      tags:
+        - Endpoints
+  /api/v1/messages:
+    get:
+      summary: ''
+      operationId: getApiV1Messages
+      description: ''
+      parameters: []
+      responses:
+        200:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                example:
+                  -
+                    id: 1
+                    user_id: 133
+                    text: test
+                    created_at: '2024-07-19T15:13:23.000000Z'
+                    updated_at: '2024-07-19T15:13:23.000000Z'
+                    time: '19 Jul 2024, 15:13:23'
+                    user:
+                      id: 133
+                      first_name: voluptatum
+                      last_name: sed
+                      email: forest92@example.org
+                      email_verified_at: null
+                      created_at: '2024-07-19T11:00:48.000000Z'
+                      updated_at: '2024-07-19T11:00:48.000000Z'
+      tags:
+        - Endpoints
+  /api/v1/message:
+    post:
+      summary: ''
+      operationId: postApiV1Message
+      description: ''
+      parameters: []
+      responses: {  }
+      tags:
+        - Endpoints
+  /api/broadcasting/auth:
+    get:
+      summary: 'Authenticate the request for channel access.'
+      operationId: authenticateTheRequestForChannelAccess
+      description: ''
+      parameters: []
       responses:
         401:
           description: ''
