# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\Api\V1\AuthController;
+use App\Http\Controllers\Api\V1\HomeController;
 use App\Http\Controllers\Api\V1\UserController;
 use App\Http\Resources\UserResource;
 use Illuminate\Http\Request;
@@ -10,9 +11,16 @@ Route::get('/user', function (Request $request) {
     return UserResource::make($request->user());
 })->middleware('auth:sanctum');
 
-Route::post('/register', [AuthController::class, 'register']);
-Route::post('/login', [AuthController::class, 'login']);
+Route::prefix('v1')->group(function () {
+    Route::post('/register', [AuthController::class, 'register']);
+    Route::post('/login', [AuthController::class, 'login'])->name('login');
 
-Route::middleware('auth:sanctum')->group(function () {
-    Route::get('/users', [UserController::class, 'index']);
+    Route::middleware('auth:sanctum')->group(function () {
+        Route::get('/users', [UserController::class, 'index']);
+
+    });
+    Route::get('/messages', [HomeController::class, 'messages'])
+        ->name('messages');
+    Route::post('/message', [HomeController::class, 'message'])
+        ->name('message');
 });
